<resources>
    <string name="app_name">Money Track</string>
    <string name="tx_income">Income</string>
    <string name="tx_expenses">Expenses</string>
    <string name="tx_balance">Balance</string>
    <string name="tx_no_transaction">No Transactions\nAdd it now</string>
    <string name="tx_new_transaction">New Transaction</string>
    <string name="tx_edit">Edit</string>
    <string name="tx_category">Category</string>
    <string name="tx_type">Type</string>
    <string name="tx_amount">Amount</string>
    <string name="tx_memo">Memo</string>
    <string name="tx_date">Date</string>
    <string name="tx_optional">Optional</string>
    <string name="tx_calendar">Calendar</string>
    <string name="tx_zero">0.00</string>
    <string name="tx_details">Details</string>
    <string name="tx_breakdown">Breakdown</string>
    <string name="tx_income_list">Income List</string>
    <string name="tx_expenses_list">Expenses List</string>
    <string name="tx_no_data_available">No Data Available</string>
    <string name="tx_mon">Mon</string>
    <string name="tx_tue">Tue</string>
    <string name="tx_wed">Wed</string>
    <string name="tx_thu">Thu</string>
    <string name="tx_fri">Fri</string>
    <string name="tx_sat">Sat</string>
    <string name="tx_sun">Sun</string>
    <string name="tx_auto_bring_forward_balance">Auto bring forward balance from last month</string>
    <string name="tx_export_as_csv">Export as CSV</string>
    <string name="tx_import_from_csv">Import from CSV</string>
    <string name="tx_app_version">App Version: %s</string>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="types">
        <item>Expenses</item>
        <item>Income</item>
    </string-array>
</resources>