<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity">

    <!-- Days of the week header -->
    <LinearLayout
        android:id="@+id/llDaysOfWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvMon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tx_mon"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvTue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tx_tue"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvWed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tx_wed"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvThu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tx_thu"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvFri"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tx_fri"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvSat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tx_sat"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvSun"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tx_sun"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>

    </LinearLayout>

    <!-- RecyclerView for the calendar dates -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCalendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="7"
        app:layout_constraintTop_toBottomOf="@id/llDaysOfWeek"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
