<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?android:attr/windowBackground"
    android:padding="16dp"
    android:layout_marginTop="32dp"
    android:backgroundTint="@android:color/white">

    <!-- Draggable area -->
    <View
        android:layout_width="50dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button_bg"
        android:backgroundTint="@android:color/darker_gray"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchBringForwardBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:paddingHorizontal="8dp"
        android:text="@string/tx_auto_bring_forward_balance"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/llExportCSV"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_export_as_csv"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llImportCSV"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingHorizontal="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_import_from_csv"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tx_app_version"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:gravity="center"/>

</LinearLayout>
