<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewTransaction">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:text="@string/tx_category"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCategories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="5dp"
                    android:scrollbars="none"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true"
                app:contentPadding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/tx_amount"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/editAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"
                    android:minHeight="48dp"
                    android:imeOptions="actionDone" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true"
                app:contentPadding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/tx_memo"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/editMemo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/tx_optional"
                    android:inputType="textShortMessage"
                    android:textSize="14sp"
                    android:maxLength="50"
                    android:minHeight="48dp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDate"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true"
                app:contentPadding="15dp"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:text="@string/tx_date"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txSelectedDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/tx_date"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginTop="18dp"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_calendar"
                    android:contentDescription="@string/tx_calendar" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>