<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TransactionDetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="3dp"
        app:cardPreventCornerOverlap="true"
        app:contentPadding="15dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Category -->
            <LinearLayout
                android:id="@+id/llCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/ivCategoryBg"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/circle_light_gray_bg"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_gravity="center" />

                    <ImageView
                        android:id="@+id/ivCategoryIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_default"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:contentDescription="@string/tx_category" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvCategoryTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="center_vertical"
                    android:text="@string/tx_category"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <!-- Type -->
            <LinearLayout
                android:id="@+id/llType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/llCategory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tvTypeLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tx_type"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tx_type"
                    android:textSize="14sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- Amount -->
            <LinearLayout
                android:id="@+id/llAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/llType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tvAmountLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tx_amount"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tx_zero"
                    android:textSize="14sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- Memo -->
            <LinearLayout
                android:id="@+id/llMemo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/llAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tvMemoLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tx_memo"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvMemo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tx_memo"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Date -->
            <LinearLayout
                android:id="@+id/llDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/llMemo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tvDateLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tx_date"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tx_date"
                    android:textSize="14sp"
                    android:textColor="@color/black" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
