<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="77dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <!-- Income Section -->
                    <LinearLayout
                        android:id="@+id/incomeSection"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvTotalIncome"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/tx_income"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/tvTotalIncomeRM"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/tx_zero"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <!-- Divider -->
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="25dp"
                        android:background="@color/light_gray" />

                    <!-- Expenses Section -->
                    <LinearLayout
                        android:id="@+id/expensesSection"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvTotalExpenses"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/tx_expenses"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/tvTotalExpensesRM"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/tx_zero"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <!-- Divider -->
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="25dp"
                        android:background="@color/light_gray" />

                    <!-- Balance Section -->
                    <LinearLayout
                        android:id="@+id/balanceSection"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/tx_balance"
                            android:textColor="@color/black"
                            android:textSize="12sp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/tvBalanceRM"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/tx_zero"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTransaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tvNoTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tx_no_transaction"
        android:textSize="16sp"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_add"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/tx_new_transaction" />

</androidx.constraintlayout.widget.ConstraintLayout>